--- a/ContentService/Dockerfile
+++ b/ContentService/Dockerfile
@@ -2,6 +2,7 @@
 
 FROM node:20-alpine AS build
 WORKDIR /app
+RUN apk add --no-cache openssl libstdc++
 COPY package*.json ./
 RUN npm ci
 COPY tsconfig.json ./
