--- a/k8s/overlays/dev/patch-configmaps.yaml
+++ b/k8s/overlays/dev/patch-configmaps.yaml
@@ -10,7 +10,15 @@ kind: ConfigMap
 metadata:
   name: content-service-config
 data:
+  CDN_BASE_URL: "https://cdn.dev.pocketlol.example"
   REDIS_URL: "redis://10.117.209.35:6379"
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: auth-service-config
+data:
+  FIREBASE_PROJECT_ID: "pocketlol-68ca6"
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -28,6 +36,7 @@ kind: ConfigMap
 metadata:
   name: streaming-service-config
 data:
+  CDN_BASE_URL: "https://cdn.dev.pocketlol.example"
   GCS_MANIFEST_BUCKET: "pocketlol-68ca6-streaming-manifests"
   PUBSUB_UPLOAD_SUBSCRIPTION: "projects/pocketlol-68ca6/subscriptions/uploaded-media-sub"
   AUDIT_LOG_TOPIC: "projects/pocketlol-68ca6/topics/streaming-audit"
