--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,29 @@ jobs:
       - name: Generate (if present)
         run: npm run generate --if-present
 
-      - name: Lint (if present)
-        run: npm run lint --if-present
+      - name: Lint (if configured)
+        run: |
+          set -euo pipefail
+
+          has_eslint_config=false
+
+          if ls -1 .eslintrc .eslintrc.* >/dev/null 2>&1; then
+            has_eslint_config=true
+          fi
+
+          if ls -1 eslint.config.* >/dev/null 2>&1; then
+            has_eslint_config=true
+          fi
+
+          if grep -q '"eslintConfig"' package.json; then
+            has_eslint_config=true
+          fi
+
+          if [[ "${has_eslint_config}" == "true" ]]; then
+            npm run lint --if-present
+          else
+            echo "No ESLint config found; skipping lint."
+          fi
 
       - name: Typecheck (if present)
         run: npm run typecheck --if-present
