--- a/EngagementService/package.json
+++ b/EngagementService/package.json
@@ -24,6 +24,7 @@
         "fastify": "^4.25.2",
         "fastify-plugin": "^4.5.1",
         "fastify-type-provider-zod": "^2.0.0",
+        "ioredis": "^5.9.0",
         "pino": "^9.0.0",
         "pino-pretty": "^11.0.0",
         "zod": "^3.22.4"
