--- a/k8s/overlays/dev/patch-configmaps.yaml
+++ b/k8s/overlays/dev/patch-configmaps.yaml
@@ -16,6 +16,13 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  name: engagement-service-config
+data:
+  REDIS_URL: "redis://10.117.209.35:6379"
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
   name: auth-service-config
 data:
   FIREBASE_PROJECT_ID: "pocketlol-68ca6"
